log.txt
   Compiling hangups v0.0.1 (file:///source)
error[E0382]: use of moved value: `res`
   --> src/lib.rs:236:55
    |
235 |                     let body = format!("{:?}", res.body());
    |                                                --- value moved here
236 |                     do_auth_step(&client, email_uri, &res, body.as_str(), client_email, client_passwd, &res.headers());
    |                                                       ^^^ value used here after move
    |
    = note: move occurs because `res` has type `hyper::client::Response`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `res`
   --> src/lib.rs:236:105
    |
235 |                     let body = format!("{:?}", res.body());
    |                                                --- value moved here
236 |                     do_auth_step(&client, email_uri, &res, body.as_str(), client_email, client_passwd, &res.headers());
    |                                                                                                         ^^^ value used here after move
    |
    = note: move occurs because `res` has type `hyper::client::Response`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

error: Could not compile `hangups`.

To learn more, run the command again with --verbose.
